--- a/.github/workflows/exercises.yml
+++ b/.github/workflows/exercises.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: exercises.pdf
-        path: exercises.pdf
+        path: exercises/exercises.pdf
